--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -26,6 +26,19 @@
 .white_bg
 	background-color: $white
 
+
+/* Responsive hides */
+
+.tablet_hide
+	color: green
+	@media (max-width: $tablet_break)
+		display:none
+.phone_hide
+	@media (max-width: $phone_break)
+		display:none
+
+
+
 /* Animation */
 
 @mixin transition($transition-property, $transition-time, $method)
@@ -92,7 +105,7 @@ header
 	@include clearfix
 	margin-bottom: $bottom_margins_grid
 	position: relative
-	a.nav1_bttn 
+	a.nav1_bttn
 		display: inline-block
 		width: 100%
 		height: 15em
@@ -135,22 +148,5 @@ header
 		> div:nth-child(2)
 			@include span(4 at 3 of 6)
 			@extend .inner_section_pad
-
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	@media (max-width: $tablet_break)
+		@include span(10 at 2 of 12)
