--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -27,17 +27,6 @@
 	background-color: $white
 
 
-/* Responsive hides */
-
-.tablet_hide
-	color: green
-	@media (max-width: $tablet_break)
-		display:none
-.phone_hide
-	@media (max-width: $phone_break)
-		display:none
-
-
 
 /* Animation */
 
@@ -72,6 +61,9 @@ a
 	opacity: 1
 	z-index: -1
 
+.full_width_image
+	width: 100%
+	margin-bottom: 4em
 
 /* Top Nav */
 
