--- a/css/style.css
+++ b/css/style.css
@@ -191,16 +191,16 @@ h4, h3, h2, h1 {
 
 /* Patterns */
 /* Spacing */
-.section_pad, section, .e_nav_bottom, footer {
+.section_pad, section, .e_nav_bottom, footer, .bl-party-three-w-captions {
   padding: 4.375em 0; }
   @media (min-width: 1400px) {
-    .section_pad, section, .e_nav_bottom, footer {
+    .section_pad, section, .e_nav_bottom, footer, .bl-party-three-w-captions {
       padding: 4em 0; } }
   @media (max-width: 900px) {
-    .section_pad, section, .e_nav_bottom, footer {
+    .section_pad, section, .e_nav_bottom, footer, .bl-party-three-w-captions {
       padding: 2em 0; } }
   @media (max-width: 620px) {
-    .section_pad, section, .e_nav_bottom, footer {
+    .section_pad, section, .e_nav_bottom, footer, .bl-party-three-w-captions {
       padding: 1em 0; } }
 
 .inner_section_pad, .e_nav1 a.nav1_bttn > div:nth-child(2), .e_nav2 a.nav2_bttn > div:nth-child(2), .e_nav3 a.nav2_bttn > div:nth-child(2), .feat_project_slider_info {
@@ -567,5 +567,42 @@ footer ul {
     width: 60px;
     display: inline-block;
     margin-right: 10px; }
+
+.bl-party-three-one-caption div:nth-child(1) {
+  width: 50%;
+  float: left; }
+.bl-party-three-one-caption div:nth-child(2) {
+  width: 50%;
+  float: right; }
+.bl-party-three-one-caption div:nth-child(3) {
+  width: 50%;
+  float: right;
+  overflow: hidden;
+  *zoom: 1; }
+
+.bl-party-three-w-captions ul {
+  overflow: hidden; }
+  .bl-party-three-w-captions ul li {
+    width: 32.20339%;
+    float: left;
+    padding: 1.69492%;
+    overflow: hidden;
+    *zoom: 1; }
+    .bl-party-three-w-captions ul li:nth-child(3n + 1) {
+      margin-left: 0;
+      margin-right: -100%;
+      clear: both;
+      margin-left: 0; }
+    .bl-party-three-w-captions ul li:nth-child(3n + 2) {
+      margin-left: 33.89831%;
+      margin-right: -100%;
+      clear: none; }
+    .bl-party-three-w-captions ul li:nth-child(3n + 3) {
+      margin-left: 67.79661%;
+      margin-right: -100%;
+      clear: none; }
+    .bl-party-three-w-captions ul li img {
+      width: 100%;
+      margin-bottom: 1.5em; }
 
 /*# sourceMappingURL=style.css.map */
