--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ h4, h3, h2, h1 {
     clear: both; }
   @media (min-width: 1400px) {
     .wrap {
-      max-width: 70%;
+      max-width: 80%;
       margin-left: auto;
       margin-right: auto; }
       .wrap:after {
@@ -190,6 +190,12 @@ h4, h3, h2, h1 {
         clear: both; } }
 
 /* Patterns */
+.left {
+  float: left; }
+
+.right {
+  float: right; }
+
 /* Spacing */
 .section_pad, section, .e_nav_bottom, footer, .bl-party-three-w-captions {
   padding: 4.375em 0; }
@@ -644,5 +650,33 @@ footer ul {
       clear: none; }
     .bl-party-three-no-captions div img {
       width: 100%; }
+
+.bl-party-random-grid img {
+  margin-bottom: 1em; }
+.bl-party-random-grid div {
+  overflow: hidden; }
+.bl-party-random-grid .rand-grid-a {
+  width: 66.10169%; }
+  .bl-party-random-grid .rand-grid-a .rand-grid-a-top {
+    width: 100%; }
+  .bl-party-random-grid .rand-grid-a .rand-grid-a-bottom {
+    width: 100%; }
+    .bl-party-random-grid .rand-grid-a .rand-grid-a-bottom div {
+      width: 48.71795%;
+      float: left; }
+      .bl-party-random-grid .rand-grid-a .rand-grid-a-bottom div:nth-child(2n + 1) {
+        margin-left: 0;
+        margin-right: -100%;
+        clear: both;
+        margin-left: 0; }
+      .bl-party-random-grid .rand-grid-a .rand-grid-a-bottom div:nth-child(2n + 2) {
+        margin-left: 51.28205%;
+        margin-right: -100%;
+        clear: none; }
+.bl-party-random-grid .rand-grid-c {
+  width: 32.20339%; }
+@media (max-width: 900px) {
+  .bl-party-random-grid img {
+    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
