--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -142,3 +142,67 @@ header
 			@extend .inner_section_pad
 	@media (max-width: $tablet_break)
 		@include span(10 at 2 of 12)
+
+
+/* Contact Call to Action banner */
+.contact-banner
+	background: $gray_dark
+	color: $white
+	ul
+		overflow: hidden
+		margin-bottom: $bottom_margins
+		li
+			display: inline-block
+			margin-right: 1em
+.btn
+	@extend .Decima
+	background-color: $red
+	padding: 10px 30px
+	margin-bottom: $bottom_margins
+	display: inline-block
+	border-radius: 5px
+	transition: all 0.3s
+	opacity: .9
+	&:hover
+		opacity: 1
+
+/* Forms */
+
+form
+	input, select, textarea
+		@extend .Decima
+		color: $gray_dark
+		width: 100%
+		display: block
+		margin-bottom: 1em
+		padding: 1em
+		background-color: $white
+		border: none
+		border-radius: 5px
+		text-shadow: none
+		font-size: inherit
+		text-align: left
+		transition: all 0.3s
+		-webkit-appearance: none
+		-moz-appearance: none
+		appearance: none
+		opacity: .9
+		&:hover
+			opacity: 1
+	button, input[type=submit]
+		@extend .Decima
+		min-width: 6em
+		font-size: 1em
+		padding: 1em
+		margin-bottom: $bottom_margins
+		display: inline-block
+		transition: all 0.3s
+		color: $white
+		cursor: pointer
+		background-color: $red
+		border: none
+		border-radius: 5px
+		text-shadow: none
+		opacity: .9
+		&:hover
+			opacity: 1
