--- a/css/style.css
+++ b/css/style.css
@@ -197,16 +197,16 @@ h4, h3, h2, h1 {
   float: right; }
 
 /* Spacing */
-.section_pad, section, .e_nav_bottom, footer {
+.section_pad, section, .e_nav_bottom, footer, .border_section, .back_img_quote {
   padding: 4.375em 0; }
   @media (min-width: 1400px) {
-    .section_pad, section, .e_nav_bottom, footer {
+    .section_pad, section, .e_nav_bottom, footer, .border_section, .back_img_quote {
       padding: 4em 0; } }
   @media (max-width: 900px) {
-    .section_pad, section, .e_nav_bottom, footer {
+    .section_pad, section, .e_nav_bottom, footer, .border_section, .back_img_quote {
       padding: 2em 0; } }
   @media (max-width: 620px) {
-    .section_pad, section, .e_nav_bottom, footer {
+    .section_pad, section, .e_nav_bottom, footer, .border_section, .back_img_quote {
       padding: 1em 0; } }
 
 .inner_section_pad, .e_nav1 a.nav1_bttn > div:nth-child(2), .e_nav2 a.nav2_bttn > div:nth-child(2), .e_nav3 a.nav2_bttn > div:nth-child(2), .feat_project_slider_info {
@@ -217,6 +217,73 @@ h4, h3, h2, h1 {
 
 section {
   position: relative; }
+
+/* Basic Grids */
+.basic_grid {
+  overflow: hidden; }
+
+.two_col_grid > div,
+.two_col_grid > li {
+  width: 49.15254%;
+  float: left; }
+  .two_col_grid > div:nth-child(2n + 1),
+  .two_col_grid > li:nth-child(2n + 1) {
+    margin-left: 0;
+    margin-right: -100%;
+    clear: both;
+    margin-left: 0; }
+  .two_col_grid > div:nth-child(2n + 2),
+  .two_col_grid > li:nth-child(2n + 2) {
+    margin-left: 50.84746%;
+    margin-right: -100%;
+    clear: none; }
+
+.three_col_grid > div,
+.three_col_grid > li {
+  width: 32.20339%;
+  float: left; }
+  .three_col_grid > div:nth-child(3n + 1),
+  .three_col_grid > li:nth-child(3n + 1) {
+    margin-left: 0;
+    margin-right: -100%;
+    clear: both;
+    margin-left: 0; }
+  .three_col_grid > div:nth-child(3n + 2),
+  .three_col_grid > li:nth-child(3n + 2) {
+    margin-left: 33.89831%;
+    margin-right: -100%;
+    clear: none; }
+  .three_col_grid > div:nth-child(3n + 3),
+  .three_col_grid > li:nth-child(3n + 3) {
+    margin-left: 67.79661%;
+    margin-right: -100%;
+    clear: none; }
+
+.four_col_grid > div,
+.four_col_grid > li {
+  width: 23.72881%;
+  float: left; }
+  .four_col_grid > div:nth-child(4n + 1),
+  .four_col_grid > li:nth-child(4n + 1) {
+    margin-left: 0;
+    margin-right: -100%;
+    clear: both;
+    margin-left: 0; }
+  .four_col_grid > div:nth-child(4n + 2),
+  .four_col_grid > li:nth-child(4n + 2) {
+    margin-left: 25.42373%;
+    margin-right: -100%;
+    clear: none; }
+  .four_col_grid > div:nth-child(4n + 3),
+  .four_col_grid > li:nth-child(4n + 3) {
+    margin-left: 50.84746%;
+    margin-right: -100%;
+    clear: none; }
+  .four_col_grid > div:nth-child(4n + 4),
+  .four_col_grid > li:nth-child(4n + 4) {
+    margin-left: 76.27119%;
+    margin-right: -100%;
+    clear: none; }
 
 /* Color classes */
 .gray_dark {
@@ -283,8 +350,7 @@ a {
   z-index: -1; }
 
 .full_width_image {
-  width: 100%;
-  margin-bottom: 4em; }
+  width: 100%; }
 
 /* Top Nav */
 header {
@@ -622,6 +688,16 @@ footer ul {
       .people_team div:last-child {
         float: right;
         margin-right: 0; } }
+
+/* Services */
+#services + #extended_nav {
+  margin-top: -4.375em; }
+
+.border_section {
+  border-top: 1px solid #f0f0f0; }
+
+.back_img_quote {
+  color: white; }
 
 /* Complimenary Styles */
 /* Color pallete */
