--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -87,6 +87,19 @@ header
 					@extend .red_bg
 					color: $white
 
+// Dev navigation bar
+
+#dev_nav
+	display: none
+	position: absolute
+	li
+		display: inline-block
+		padding-right: 1.5em
+		@extend .Decima
+		@extend .small_paragraph
+		color: #CECECE
+		a:hover
+			color: $red
 
 /* Bottom Nav (Extended Nav) */
 
