--- a/css/shame.css
+++ b/css/shame.css
@@ -2,4 +2,19 @@
 	padding: 4.375em 0;
 	background-position: center;
 	background-size: cover;
+	position: relative;
+}
+.back_img_quote:before {
+	position: absolute;
+	content:" ";
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	display: block;
+	z-index:0;
+	opacity: .75;
+}
+.back_img_quote > .wrap {
+	position: relative;
 }
